<resources>
    <string name="app_name">ED Game</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!-- Strings related to login -->

    <string name="action_register">Register</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_username">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_answer">Enter your answer below</string>
    <string name="button_register">Register</string>
    <string name="error_account_exists">Duplicate account exists</string>
    <string name="button_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="button_english_grammar">English Grammar</string>
    <string name="button_pronunciation">Pronunciation</string>
    <string name="button_next">Next</string>
    <string name="button_home">Home</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_about">About</string>
    <string name="button_log_out">Log out</string>
    <string name="button_previous">Previous</string>
    <string name="button_play">Play</string>
    <string name="button_spelling">Spelling</string>
    <string name="button_check">Check</string>
    <string name="button_settings">Settings</string>
    <string name="game_title">English Dialect Game</string>
    <string name="start">TAP TO START</string>
    <string name="category">Category</string>
    <string name="sound">SOUND :</string>
    <string name="stages_done">ALL STAGES DONE!</string>
    <string name="reymon_magsayo">Reymon F. Magsayo</string>
    <string name="margie_callote">Margie T. Callote</string>
    <string name="jazthine_calamba">Jazthine A. Calamba</string>
    <string name="eddie_cenita">Eddie S. Cenita Jr.</string>
    <string name="judy_dellote">Judy Ann O. Dellote</string>
    <string name="about">The researchers developed an English Dialect Game that helps and develop the learning of Elementary Students in Grammar, SPelling and Pronunciation through technological way.</string>
    <string name="about_version">Version of Application 1.0 Android Compatibility 5.1.1 (Lollipop or Higher Version)</string>
</resources>
